src/test/resources/repos/invalid-binary-desc-subjects/a6f/e58/a7f/a6fe58a7f87784a02c1d2e3623a7dc7c52fdd54932dd9457ea8ed060c5fc73a3/v1/inventory.json.sha512
d2d43e7d5a19b9de1ebf606caf67fee5a5d5ae3343d60d69314f3551c0c613374575e473cf7e1972b8ba45567bc1ed991910928aeb83c4ccdf3e18d8112f586b	inventory.json